crates/ink/tests/ui/contract/fail/constructor-payable-invalid-1.stderr
error: unknown ink! attribute argument (name = value)
 --> tests/ui/contract/fail/constructor-payable-invalid-1.rs:9:28
  |
9 |         #[ink(constructor, payable = true)]
  |                            ^^^^^^^^^^^^^^
